# a-few-words

./: README.md  SECURITY.md  background.ts  content.ts  content.tsx  package-lock.json  package.json  pnpm-lock.yaml  sidepanel.tsx  sonar-project.properties
.github/workflows/: shuttle.yml
chrome-extension/: HeaderView.tsx  WelcomeView.tsx  WordListView.tsx  auth-slice.ts  background.ts  common.ts  content.ts  package.json  pnpm-lock.yaml  sidepanel.tsx  store.ts  style.css  tailwind.config.js  words-slice.ts
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  privacy-policy.md  terms-and-conditions.md
scripts/: update_version.sh
server/: .env  Cargo.toml  compose.yml  diesel.toml
server/bin-shuttle/: Cargo.toml
server/bin-shuttle/src/: cognito.rs  dto.rs  error.rs  main.rs  restful.rs
server/engine/: Cargo.toml
server/engine/migrations/: 0001_create_words.sql  0001_init_database.sql  0003_create_words.sql  0004_alter_words.sql
server/engine/src/: api.rs  error.rs  lib.rs  translate.rs  types.rs
server/migrations/2024-07-15-034352_create_words/: up.sql
server/migrations/2024-07-16-025414_alter_words/: down.sql  up.sql
server/shuttle-actix-web/: Cargo.toml
server/shuttle-actix-web/src/: cognito.rs  main.rs  restful.rs
server/src/: auth0.rs  cognito.rs  dto.rs  main.rs  models.rs  restful.rs  schema.rs
website/: index.html  orval.config.cjs  package.json  pnpm-lock.yaml  tailwind.config.js
website/src/: App.tsx  Dashboard.tsx  Login.tsx  Logo.tsx  api.ts  index.css  main.tsx  oidc.ts  routes.tsx
website/src/components/: AnimatedBackground.tsx  LoginPage.tsx  Overview.tsx  PageTransition.tsx  WordBrowser.tsx
