[package]
name = "a-few-words"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
serde = { version = "1.0.204", features = ["derive"] }
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"
shuttle-shared-db = { version = "0.46.0", features = ["postgres"] }
tokio = "1.38.0"
