[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.7.1", features = ["chrono", "postgres"] }
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"], optional = true }
once_cell = "1.19.0"
thiserror = "1.0.63"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }
ctor = "0.2.8"

[features]
default = []
serde = ["dep:serde"]
