[package]
name = "engine"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.7.1", features = ["chrono", "postgres", "runtime-async-std"] }
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"], optional = true }
once_cell = "1.19.0"
thiserror = "1.0.63"
reqwest = { version = "0.12.5", features = ["json"], optional = true }
serde_json = { version = "1.0.122", optional = true }
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }
dotenv = "0.15.0"

[features]
default = []
serde = ["dep:serde"]
translate = ["dep:serde", "dep:reqwest", "dep:serde_json"]
