[package]
name = "engine"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-async-std",
] }
validator = { version = "0.18.1", features = ["derive"] }
regex = { version = "1.10.5", features = ["unicode"] }
serde = { version = "1.0.204", features = ["derive"] }
once_cell = "1.19.0"
thiserror = "1.0.63"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = { version = "1.0.122" }
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }
dotenv = "0.15.0"

[features]
default = []
